# glfw-template

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cc
